# service_marketplace

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  render.yaml  test.http
apps/accounts/: admin.py  backends.py  managers.py  models.py  otp.py  serializers.py  urls.py  validators.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_phone.py
apps/accounts/tests/: test_auth.py  test_phone_validator.py
apps/bookings/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/bookings/migrations/: 0001_initial.py  0002_remove_booking_service_booking_notes_and_more.py
apps/bookings/tests/: test_booking_flow.py  test_concurrency.py  test_multi_service.py
apps/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py  0002_service_discount_description_and_more.py
apps/common/: exceptions.py  models.py  permissions.py
apps/dashboard/: urls.py  views.py
apps/notifications/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py  (+1 more)
apps/reviews/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/search/: services.py
apps/subscriptions/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/support/: admin.py  models.py  serializers.py  urls.py  views.py
apps/vendors/: admin.py  models.py  serializers.py  urls.py  views.py
config/: celery.py  urls.py
config/settings/: base.py  dev.py  prod.py  test.py
requirements/: base.txt  dev.txt
(+15 files in other folders)
