# Tool configuration only — dependencies are managed with pip (requirements/).
# The [project] block exists so build tools that parse this file don't error.
[project]
name = "service-marketplace-backend"
version = "1.0.0"
requires-python = ">=3.13,<3.14"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "tests.py"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.black]
line-length = 100
extend-exclude = "migrations"
